CRUD funcionando com a list e delete

--- a/src/main/resources/templates/Editar.html
+++ b/src/main/resources/templates/Editar.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Banco</title>
+    <title>Editar Banco</title>
 </head>
 <body>
-<h1>estamos na tela de banco</h1>
+
 </body>
 </html>
