--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="pt-BR" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+          crossorigin="anonymous">
     <meta charset="UTF-8">
     <title>HelloWorld</title>
 </head>
 <body>
-    <h1>estamos todos junto nessa meus amigos alo a</h1>
+<div class="d-flex flex-row mb-3">
+    <div class="p-2">
+        <img src="../static/images/lulu.jpeg" width="100%"
+            th:src="@{/images/lulu.jpeg}">
+    </div>
+    <div class="container conta">
+        <h1 class="text text-center"> já volto<br>fiquem com a famosa lulu de lambreta a drift queen<br>
+        só de rhangângân, destruidora de pnels pirelli, dona do feito de colocar 130km/h em sua lambreta
+            <br>vrum vrum</h1>
+    </div>
+     <div>
+         <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1" title="YouTube video player"
+                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                 allowfullscreen></iframe>
+     </div>
+    <div>
+        <a th:href="@{/agencia}"><button class="btn btn-primary"> Agencias</button></a>
+        <a th:href="@{/banco}"><button class="btn btn-primary">Bancos</button> </a>
+    </div>
 </body>
 </html>
