--- a/src/main/resources/templates/agencia/Agencia.html
+++ b/src/main/resources/templates/agencia/Agencia.html
@@ -5,9 +5,10 @@
           rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
           crossorigin="anonymous">
     <meta charset="UTF-8">
-    <title>Agencias</title>
+    <title>HelloWorld</title>
 </head>
 <body>
+<a th:href="@{/}"><button class="btn btn-primary btn-sm">Inicio</button> </a>
 <div>
     <table class="table table-striped table-hover">
         <thead>
@@ -26,6 +27,9 @@
                 <td th:text="${agencia.getEndereco()}"></td>
                 <td th:text="${agencia.getFone()}"></td>
                 <td th:text="${agencia.getTipo()}"></td>
+                <td><a th:href="@{/agencia/update/{id}(id = ${agencia.id})}">
+                    <button class="btn btn-sm btn-primary">editar</button>
+                </a> </td>
                 <td><a th:href="@{/agencia/{agenciaId}/delete(agenciaId = ${agencia.id})}"><button class="btn btn-primary">excluir</button> </a></td>
             </tr>
         </tbody>
