atualização das telas

--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -8,13 +8,13 @@
     <title>HelloWorld</title>
 </head>
 <body>
-<div class="sticky-lg-bottom text-center">
+<div class="sticky-lg-bottom text-center border border-dark">
     <h1>Escolha qual sistema deseja entrar</h1>
-    <a th:href="@{/agencia}"><button class="btn btn-primary"> Agencias</button></a>
-    <a th:href="@{/banco}"><button class="btn btn-primary">Bancos</button> </a>
+    <a th:href="@{/agencia}"><button class="btn btn-info text-white btn-lg"> Agencias</button></a>
+    <a th:href="@{/banco}"><button class="btn btn-info text-white btn-lg btn-outline-secondary">Bancos</button> </a>
 </div>
 <div class="row">
-    <h1 class="text-center">enquanto isso fique com boa musica e arte conteporânea!</h1>
+    <h1 class="text-center">enquanto isso fique com boa musica e arte contemporânea!</h1>
 </div>
 <div class="d-flex">
     <div class="p-2">
