--- a/src/main/resources/templates/banco/Banco.html
+++ b/src/main/resources/templates/banco/Banco.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
 <html lang="pt-BR" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
+<script type="text/javascript" th:src="@{/js/cssandjs/actions.js}"></script>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
           crossorigin="anonymous">
@@ -8,46 +10,44 @@
     <title>HelloWorld</title>
 </head>
 <body>
+
 <div>
     <!--        <img src="../static/images/lulu.jpeg" width="1280"-->
     <!--            th:src="@{images/lulu.jpeg}">-->
 </div>
 <div>
-    <a href="/banco/novo"><button class="btn btn-info btn-lg">Novo</button></a>
+    <a href="/banco/novo"><button class="btn btn-primary">Novo</button></a>
     <a th:href="@{/}"><button class="btn btn-primary">Inicio</button></a>
 </div>
 
-<div class="container container-sm" style="margin: 10px">
+<div class="table">
     <div class="row">
         <div class="panel-heading text-center">
-            <h1 class="panel-title">Lista de bancos</h1>
+            <h1 class="panel-title bg-primary text-white">Lista de bancos</h1>
         </div>
-        <div class="table-wrapper-scroll-y my-custom-scrollbar overflow-scroll" >
-            <table class="table table-bordered table-striped mb-0">
+        <div class="" >
+            <table class="table table-bordered mb-0 responsive-table">
                 <thead>
-                <th>ID</th>
                 <th>Nome</th>
                 <th>Numero</th>
                 </thead>
                 <tbody>
                 <tr th:each="banco : ${bancos}">
-                    <td th:text="${banco.id}"></td>
                     <td th:text="${banco.getNome()}"></td>
                     <td th:text="${banco.getNumero()}"></td>
-                    <td><a th:href="@{/banco/{bancoId}/(bancoId = ${banco.id})}">
-                        <button class="btn btn-primary btn-sm">detalhes</button>
-                    </a></td>
-                    <td><a th:href="@{/banco/update/{bancoId}(bancoId = ${banco.id})}">
-                        <button class="btn btn-primary btn-sm">Editar</button> </a></td>
-                    <td><a th:href="@{/banco/{bancoId}/delete(bancoId = ${banco.id})}">
-                        <button class="btn btn-primary btn-sm">Excluir</button>
-                    </a></td>
+                    <td>
+                        <div class="d-flex justify-content-end">
+                            <a th:href="@{/banco/{bancoId}/(bancoId = ${banco.id})}" class="btn btn-primary">detalhes</a>
+                            <a class="btn btn-primary mx-2" th:href="@{/banco/update/{bancoId}(bancoId = ${banco.id})}">Editar</a>
+                        <a class="btn btn-primary " th:href="@{/banco/{bancoId}/delete(bancoId = ${banco.id})}">Excluir</a>
+                    </div></td>
                 </tr>
                 </tbody>
             </table>
         </div>
     </div>
 </div>
+<button type="button" th:onclick="showAlert()"> kfansdkba </button>
 
 </body>
 </html>
