--- a/src/main/resources/static/styles/css/style.css
+++ b/src/main/resources/static/styles/css/style.css
@@ -1,4 +1,57 @@
-.alo{
-    background-color: aqua;
-    color: aqua;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    outline: 0;
+}
+
+.filter{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+    opacity: .7;
+    background: rgb(2,0,36);
+    background: linear-gradient(139deg, rgba(2,0,36,1) 0%, rgba(9,121,118,1) 40%, rgba(8,130,131,1) 46%, rgba(31,175,204,1) 100%);
+}
+
+table{
+    position: absolute;
+    z-index: 2;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    width: 60%;
+    border-collapse: collapse ;
+    border-spacing: 0;
+    border-radius: 12px 12px 0px 0px;
+    overflow: hidden;
+    box-shadow: 10px 10px 10px rgba(32,32,32,.3);
+    background: #fafafa;
+    text-align: center;
+}
+.aa{
+    position: fixed;
+    z-index: 3;
+}
+
+th,td{
+    padding: 3px 10px;
+}
+
+th{
+    background: #088283;
+    color:#fafafa;
+    text-transform: uppercase;
+    font-family: 'Roboto', sans-serif;
+}
+
+td{
+    font-family: 'Open Sans' , sans-serif;
+}
+tr:nth-child(odd){
+    background-color: #f1f1f1;
 }
