--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -1,32 +1,66 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
 <html lang="pt-BR" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-          rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-          crossorigin="anonymous">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" th:href="@{/styles/css/index.css}">
+    <link rel="stylesheet" href="../../static/styles/css/index.css">
     <meta charset="UTF-8">
-    <title>HelloWorld</title>
+    <title>RayhBank</title>
 </head>
 <body>
-<div class="sticky-lg-bottom text-center border border-dark">
-    <h1>Escolha qual sistema deseja entrar</h1>
-    <a th:href="@{/agencia}"><button class="btn btn-info text-white btn-lg"> Agencias</button></a>
-    <a th:href="@{/banco}"><button class="btn btn-info text-white btn-lg btn-outline-secondary">Bancos</button> </a>
-</div>
-<div class="row">
-    <h1 class="text-center">enquanto isso fique com boa musica e arte contemporânea!</h1>
-</div>
-<div class="d-flex">
-    <div class="p-2">
-        <img src="../static/images/lulu.jpeg" width="50%"
-            th:src="@{/images/lulu.jpeg}">
+<div class="sidebar">
+    <div class="logo-content">
+        <div class="logo">
+            <i class='bx bxl-xing'></i>
+            <div class="logo-name">Rayhbank</div>
+        </div>
+        <i class='bx bx-menu' id="btn"></i>
     </div>
+    <ul class="nav_list">
+        <li>
+            <a th:href="@{/banco?page=0&size=10}">
+                <i class='bx bxs-bank' ></i>
+                <span class="links_name">bancos</span>
+            </a>
+            <span class="tooltip">Bancos</span>
+        </li>
+        <li>
+            <a th:href="@{/agencia}">
+                <i class='bx bxl-magento'></i>
+                <span class="links_name">Agencias</span>
+            </a>
+            <span class="tooltip">Agencias</span>
+        </li>
+    </ul>
+    <div class="profile-content">
+        <div class="profile">
+            <div class="profile-details">
+                <a href="#">
+                <i class='bx bxl-github'></i>
+                <div class="name">Rayh</div>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+<script>
+    let btn = document.querySelector("#btn");
+    let sidebar = document.querySelector(".sidebar");
 
-     <div>
-         <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1" title="YouTube video player"
-                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                 allowfullscreen></iframe>
-     </div>
+    btn.onclick = function (){
+        sidebar.classList.toggle("active");
+    }
+</script>
+<div class="corpo">
+<div>
+    <h1 class="text-center">enquanto isso arte contemporânea!</h1>
+</div>
+<div >
+    <div>
+        <img src="../static/images/lulu.jpeg" width="50%"
+            th:src="@{/images/lulu.jpeg}" style="height: 400px; width: 400px">
+    </div>
+</div>
 </div>
 </body>
 </html>
