--- a/src/main/resources/templates/banco/Banco.html
+++ b/src/main/resources/templates/banco/Banco.html
@@ -1,53 +1,55 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
 <html lang="pt-BR" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-<script type="text/javascript" th:src="@{/js/cssandjs/actions.js}"></script>
-
+    <meta charset="UTF-8">
+    <title>Todos os Bancos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
           crossorigin="anonymous">
-    <meta charset="UTF-8">
-    <title>HelloWorld</title>
+    <script type="text/javascript" th:src="@{/js/cssandjs/actions.js}"></script>
+    <link rel="stylesheet" th:href="@{/styles/css/style.css}">
+
 </head>
 <body>
-
-<div>
-    <!--        <img src="../static/images/lulu.jpeg" width="1280"-->
-    <!--            th:src="@{images/lulu.jpeg}">-->
-</div>
-<div>
+<div class="filter"></div>
+<div class="aa">
     <a href="/banco/novo"><button class="btn btn-primary">Novo</button></a>
     <a th:href="@{/}"><button class="btn btn-primary">Inicio</button></a>
 </div>
 
-<div class="table">
+<div style="padding-top: 100px">
     <div class="row">
-        <div class="panel-heading text-center">
-            <h1 class="panel-title bg-primary text-white">Lista de bancos</h1>
+        <div class="filter">
+
         </div>
         <div class="" >
-            <table class="table table-bordered mb-0 responsive-table">
+            <table>
                 <thead>
-                <th>Nome</th>
-                <th>Numero</th>
+                    <th>Nome do banco</th>
+                    <th>Numero</th>
+                    <th>ações</th>
                 </thead>
                 <tbody>
-                <tr th:each="banco : ${bancos}">
-                    <td th:text="${banco.getNome()}"></td>
-                    <td th:text="${banco.getNumero()}"></td>
-                    <td>
-                        <div class="d-flex justify-content-end">
-                            <a th:href="@{/banco/{bancoId}/(bancoId = ${banco.id})}" class="btn btn-primary">detalhes</a>
-                            <a class="btn btn-primary mx-2" th:href="@{/banco/update/{bancoId}(bancoId = ${banco.id})}">Editar</a>
-                        <a class="btn btn-primary " th:href="@{/banco/{bancoId}/delete(bancoId = ${banco.id})}">Excluir</a>
-                    </div></td>
-                </tr>
+                    <tr th:each="banco : ${bancos}">
+                        <td th:text="${banco.getNome()}"></td>
+                        <td th:text="${banco.getNumero()}"></td>
+                        <td>
+                            <div class="d-flex justify-content-end">
+                                <a th:href="@{/banco/{bancoId}/(bancoId = ${banco.id})}" class="btn btn-primary">detalhes</a>
+                                <a class="btn btn-primary mx-2" th:href="@{/banco/update/{bancoId}(bancoId = ${banco.id})}">Editar</a>
+                            <a class="btn btn-primary " th:href="@{/banco/{bancoId}/delete(bancoId = ${banco.id})}">Excluir</a>
+                        </div></td>
+                    </tr>
                 </tbody>
             </table>
         </div>
     </div>
 </div>
-<button type="button" th:onclick="showAlert()"> kfansdkba </button>
+    <div th:if="${bancos.totalPages > 0}" class="pagination" th:each="bancoNumber : ${bancos.number}">
+        <a th:href="@{banco (page = ${bancoNumber} , size = 10)}"
+           th:text="${bancoNumber}" th:class="${bancoNumber == bancos.number +1} ? active" class="btn btn-info">aaa</a>
+    </div>
+<button type="button" th:onclick="showAlert()">aaa</button>
 
 </body>
 </html>
