--- a/src/main/resources/static/styles/css/components.css
+++ b/src/main/resources/static/styles/css/components.css
@@ -1,5 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
+.BankBody{
+    display: flex;
+    flex-direction: column;
+    padding-left: 6%;
+    height: 100%;
+    align-content: center;
+}
+.div-table{
+    padding-top: 100px ;
+    position: absolute;
+    align-content: center;
+    margin: 5px 0 0 0;
+    width: 100%;
+    height:100%;
+}
+
+/*================================================SIDEBAR===========================================================*/
 *{
     margin: 0;
     padding: 0;
@@ -21,8 +39,9 @@ body{
     top: 0;
     left: 0;
     height: 100%;
-    width: 78px;
-    background: #097976 ;
+    width: 6%;
+    background: rgb(2,0,36);
+    background: linear-gradient(139deg, rgba(2,0,36,1) 0%, rgba(9,121,118,1) 40%, rgba(8,130,131,1) 46%, rgba(31,175,204,1) 100%);
     padding: 6px 14px;
     z-index: 99;
     transition: all 0.5s ease;
@@ -85,7 +104,7 @@ body{
     line-height: 50px;
 }
 
-.sidebar ul li .tooltip{
+.sidebar ul li custombutton .tooltip{
     position: absolute;
     left: 122px;
     top: 50%;
@@ -103,16 +122,16 @@ body{
     display: block;
 }
 
-.sidebar.active ul li .tooltip{
+.sidebar.active ul li custombutton .tooltip{
     display: none;
 }
-.sidebar ul li:hover .tooltip{
+.sidebar ul li:hover custombutton .tooltip{
     transition: all 0.5s ease;
     opacity: 1;
     top: 50%;
 }
 
-.sidebar ul li a{
+.sidebar ul li custombutton a{
     color: white;
     display: flex;
     align-items: center;
@@ -129,11 +148,11 @@ body{
     opacity: 1;
     pointer-events: auto;
 }
-.sidebar ul li a:hover{
+.sidebar ul li custombutton a:hover{
     color: black;
     background: white;
 }
-.sidebar ul li a i{
+.sidebar ul li custombutton a i{
     height: 100%;
     min-width: 50px;
     border-radius: 12px;
@@ -153,7 +172,6 @@ body{
     border-radius: 12px;
     align-items: center;
 }
-
 .sidebar.active .profile-content .profile{
     opacity: 1;
     pointer-events: auto;
@@ -170,9 +188,112 @@ body{
     border-radius: 12px;
 }
 
-.corpo{
+/*================================================TABLE================================================================*/
+table{
+    /*position: absolute;*/
+
+    /*top: 30%;*/
+    /*left: 50%;*/
+    /*z-index: 2;*/
+    /*transform: translate(-50%,-50%);*/
+    margin: 0 auto;
+    width: 60%;
+    border-collapse: collapse ;
+    border-spacing: 0;
+    border-radius: 12px 12px 0px 0px;
+    overflow: hidden;
+    box-shadow: 10px 10px 10px rgba(32,32,32,.3);
+    background: #fafafa;
+    text-align: center;
+}
+.aa{
     position: fixed;
-    align-items: center;
-    color: #f1f1f1;
-    padding-left: 100px;
+    z-index: 3;
+}
+
+th,td{
+    padding: 3px 10px;
+}
+
+th{
+    background: #088283;
+    color:#fafafa;
+    text-transform: uppercase;
+    font-family: 'Roboto', sans-serif;
+}
+
+td{
+    font-family: 'Open Sans' , sans-serif;
+}
+tr:nth-child(odd){
+    background-color: #f1f1f1;
+}
+
+/*==================================================BUTTONS===========================================================*/
+custombutton{
+    height: 10px;
+    padding: 0;
+    border: none;
+    background-color: rgba(0,0,0,0);
+}
+
+
+
+/* CSS */
+.button-85 {
+   padding: 0.6em 2em;
+   border: none;
+   outline: none;
+   color: rgb(255, 255, 255);
+   background: #111;
+   cursor: pointer;
+   position: relative;
+   z-index: 0;
+   border-radius: 10px;
+   user-select: none;
+   -webkit-user-select: none;
+   touch-action: manipulation;
+}
+
+.button-85:before {
+    content: "";
+    background: linear-gradient(
+            45deg,
+            rgba(0,212,255,1) 0%, rgba(0,121,118,1) 30%, rgba(8,136,131,1) 59%, rgba(0,212,255,1) 100%);
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    -webkit-filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing-button-85 20s linear infinite;
+    transition: opacity 0.3s ease-in-out;
+    border-radius: 10px;
+}
+
+@keyframes glowing-button-85 {
+    0% {
+        background-position: 0 0;
+    }
+    50% {
+        background-position: 400% 0;
+    }
+    100% {
+        background-position: 0 0;
+    }
+}
+
+.button-85:after {
+    z-index: -1;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #222;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
 }
