--- a/src/main/resources/templates/agencia/Agencia.html
+++ b/src/main/resources/templates/agencia/Agencia.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
 <html lang="pt-BR" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-          rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-          crossorigin="anonymous">
+<head th:insert="/fragments/start :: startHeader">
     <meta charset="UTF-8">
-    <title>HelloWorld</title>
+    <title>Agências</title>
 </head>
 <body>
+    <sidebar th:insert="/fragments/start :: sidebar(linkOne = 'index',linkTwo = 'banco')"></sidebar>
 <a th:href="@{/}"><button class="btn btn-primary btn-sm">Inicio</button> </a>
-<div>
+<div >
     <table class="table table-striped table-hover">
         <thead>
         <th>ID</th>
