--- a/src/main/resources/templates/banco/Banco.html
+++ b/src/main/resources/templates/banco/Banco.html
@@ -1,49 +1,45 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
 <html lang="pt-BR" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
+<head th:insert="/fragments/start :: startHeader">
     <title>Todos os Bancos</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-          rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-          crossorigin="anonymous">
     <script type="text/javascript" th:src="@{/js/cssandjs/actions.js}"></script>
-    <link rel="stylesheet" th:href="@{/styles/css/style.css}">
-
 </head>
 <body>
-<div class="filter"></div>
-<div class="aa">
-    <a href="/banco/novo"><button class="btn btn-primary">Novo</button></a>
-    <a th:href="@{/}"><button class="btn btn-primary">Inicio</button></a>
-</div>
-
-<div style="padding-top: 100px">
-    <div class="row">
-        <div class="filter">
-
+    <sidebar th:insert="/fragments/start :: sidebar(linkOne = 'index', linkTwo = 'agencia')"></sidebar>
+<div class="BankBody">
+    <div>
+        <div>
+            <input type="text">
+            <button type="button">filtrar</button>
         </div>
-        <div class="" >
-            <table>
-                <thead>
-                    <th>Nome do banco</th>
-                    <th>Numero</th>
-                    <th>ações</th>
-                </thead>
-                <tbody>
-                    <tr th:each="banco : ${bancos}">
-                        <td th:text="${banco.getNome()}"></td>
-                        <td th:text="${banco.getNumero()}"></td>
-                        <td>
-                            <div class="d-flex justify-content-end">
-                                <a th:href="@{/banco/{bancoId}/(bancoId = ${banco.id})}" class="btn btn-primary">detalhes</a>
-                                <a class="btn btn-primary mx-2" th:href="@{/banco/update/{bancoId}(bancoId = ${banco.id})}">Editar</a>
-                            <a class="btn btn-primary " th:href="@{/banco/{bancoId}/delete(bancoId = ${banco.id})}">Excluir</a>
-                        </div></td>
-                    </tr>
-                </tbody>
-            </table>
+        <div>
+            <a href="#">
+                <button class="button-85" role="button">Proxima</button>
+            </a>
+        </div>
+        <div>
+            <a href="#">
+                <button class="button-85" role="button">Anterior</button>
+            </a>
         </div>
     </div>
+<div class="div-table">
+
+
+        <table>
+            <tbody>
+            <tr>
+                <th>Nome</th>
+                <th>Número</th>
+            </tr>
+            <tr th:each="banco : ${bancos}">
+                <td th:text="${banco.getNome()}"></td>
+                <td th:text="${banco.getNumero()}"></td>
+            </tr>
+            </tbody>
+        </table>
+
+</div>
 </div>
     <div th:if="${bancos.totalPages > 0}" class="pagination" th:each="bancoNumber : ${bancos.number}">
         <a th:href="@{banco (page = ${bancoNumber} , size = 10)}"
