--- a/src/main/resources/templates/banco/Novo.html
+++ b/src/main/resources/templates/banco/Novo.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
 <html lang="pt-BR" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-          rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-          crossorigin="anonymous">
+<head >
     <meta charset="UTF-8">
+    <link rel="stylesheet" th:href="@{/styles/css/forms.css}">
     <title>novo</title>
 </head>
 <body>
-<a th:href="@{/banco}"><button class="btn btn-primary btn-sm">voltar</button> </a>
-
-<h1>Cadastrar novo Banco</h1>
+<a th:href="@{/banco (size = )}"><button class="btn btn-primary btn-sm">voltar</button> </a>
+<div class="login-box">
+<h2>Cadastrar novo Banco</h2>
 <form class="form-inline" method="post" style="margin: 20px" th:object="${banco}" th:action="@{/banco/novo}">
-    <div class="form-group">
+    <div class="user-box">
         <input type="text" class="form-control" placeholder="nome" th:field="*{nome}"/>
-        <input type="text" class="form-control" placeholder="numero" th:field="*{numero}"/>
-        <p>precisa de nuemro meu chegado</p>
-        <button type="submit" class="btn btn-primary">Cadastrar</button>
     </div>
+    <div class="user-box">
+        <input type="text" class="form-control" placeholder="numero" th:field="*{numero}"/>
+    </div>
+        <button type="submit" class="button-85">Cadastrar</button>
+
 </form>
+</div>
 </body>
 </html>
