--- a/src/main/resources/static/styles/css/components.css
+++ b/src/main/resources/static/styles/css/components.css
@@ -9,12 +9,26 @@
     align-content: center;
 }
 .div-table{
+    z-index: 50;
     padding-top: 100px ;
     position: absolute;
     align-content: center;
     margin: 5px 0 0 0;
     width: 100%;
     height:100%;
+}
+
+.search-bar{
+    top: 75px;
+    left: 50%;
+    position: fixed;
+    flex-wrap: nowrap;
+    z-index: 51;
+    display: flex;
+}
+
+.bar-element{
+    padding-left: 10px;
 }
 
 /*================================================SIDEBAR===========================================================*/
@@ -230,6 +244,49 @@ tr:nth-child(odd){
 }
 
 /*==================================================BUTTONS===========================================================*/
+.custom-btn {
+    /*width: 50px;*/
+    height: 25px;
+    /*padding: 10px 25px;*/
+    border: 1px solid #000;
+    font-family: 'Lato', sans-serif;
+    font-weight: 500;
+    background: transparent;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    position: relative;
+    display: inline-block;
+}
+.btn-16 {
+    background: #088283;
+    color: #fff;
+    z-index: 1;
+}
+.btn-16:after {
+    position: absolute;
+    content: "";
+    width: 0;
+    height: 100%;
+    top: 0;
+    left: 0;
+    direction: rtl;
+    z-index: -1;
+    background: #e0e5ec;
+    transition: all 0.3s ease;
+}
+.btn-16:hover {
+    color: #088283;
+}
+.btn-16:hover:after {
+    left: auto;
+    right: 0;
+    width: 100%;
+}
+.btn-16:active {
+    top: 2px;
+}
+
+
 custombutton{
     height: 10px;
     padding: 0;
