--- a/src/main/resources/templates/banco/Banco.html
+++ b/src/main/resources/templates/banco/Banco.html
@@ -9,6 +9,9 @@
 
     <div class="search-bar">
         <div class="bar-element">
+            <a th:href="@{/banco/novo}"><button class="custom-btn btn-16">Novo Banco</button> </a>
+        </div>
+        <div class="bar-element">
             <input type="text" placeholder="filtrar por nome">
             <button type="text" class="custom-btn btn-16">filtrar</button>
         </div>
