--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -9,7 +9,7 @@
     <sidebar th:insert="/fragments/start :: sidebar(linkOne = 'banco', linkTwo = 'agencia')"></sidebar>
 <div class="corpo">
 <div>
-    <h1 class="text-center">enquanto isso arte contemporânea!</h1>
+    <h1 class="text-center" style="color: #fafafa">enquanto isso arte contemporânea!</h1>
 </div>
 <div >
     <div>
