--- a/src/main/resources/templates/banco/Banco.html
+++ b/src/main/resources/templates/banco/Banco.html
@@ -10,10 +10,12 @@
         <div class="bar-element">
             <a th:href="@{/banco/novo}"><button class="custom-btn btn-16">Novo Banco</button> </a>
         </div>
-        <div class="bar-element">
-            <input type="text" placeholder="filtrar por nome">
-            <button type="text" class="custom-btn btn-16">filtrar</button>
-        </div>
+        <form class="bar-element" method="get" th:object="${filtro}" th:action="@{/banco}">
+            filter : <input type="text" name="filtro" id="filtro" th:value="${filtro}" required>
+            &nbsp;
+            <button type="text" class="custom-btn btn-16" th:href="@{/banco(filtro = ${filtro})}">filtrar</button>
+            &nbsp;
+        </form>
         <div class="bar-element" th:if="${bancos.number != 0}">
             <a th:href="@{/banco (size =${bancos.size} , page = ${bancos.number -1})}">
                 <button class="custom-btn btn-16" role="button">Anterior</button>
