--- a/src/main/resources/templates/fragments/start.html
+++ b/src/main/resources/templates/fragments/start.html
@@ -52,7 +52,7 @@
     <div class="profile-content">
         <div class="profile">
             <div class="profile-details">
-                <a href="#">
+                <a href="https://github.com/SoImRayh/CRUD-Spring">
                     <i class='bx bxl-github'></i>
                     <div class="name">Rayh</div>
                 </a>
