--- a/src/main/resources/templates/agencia/novo.html
+++ b/src/main/resources/templates/agencia/novo.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
 <html lang="pt-BR" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head th:insert="/fragments/start :: startHeader">
+<head>
+    <meta charset="UTF-8">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" th:href="@{/styles/css/components.css}">
     <meta charset="UTF-8">
     <title>HelloWorld</title>
 </head>
