--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -1,22 +1,69 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
 <html lang="pt-BR" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head th:insert="/fragments/start :: startHeader">
-
+<head>
+    <meta charset="UTF-8">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" th:href="@{/styles/css/components.css}">
     <meta charset="UTF-8">
     <title>RayhBank</title>
 </head>
 <body>
-    <sidebar th:insert="/fragments/start :: sidebar(linkOne = 'banco', linkTwo = 'agencia')"></sidebar>
-<div class="corpo">
-<div>
-    <h1 class="text-center" style="color: #fafafa">enquanto isso arte contemporânea!</h1>
-</div>
-<div >
-    <div>
-        <img src="../static/images/lulu.jpeg" width="50%"
-            th:src="@{/images/lulu.jpeg}" style="height: 400px; width: 400px">
+<sidebar class="sidebar" >
+    <div class="logo-content">
+        <div class="logo">
+            <i class='bx bxl-xing'></i>
+            <div class="logo-name">Rayhbank</div>
+        </div>
+        <i class='bx bx-menu' id="btn"></i>
     </div>
-</div>
+    <ul class="nav_list">
+        <li>
+            <customButton>
+                <a th:href="@{/banco}">
+                    <i class="bx bxs-bank"></i>
+                    <span class="links_name">Bancos</span>
+                </a>
+                <span class="tooltip">Bancos</span>
+            </customButton>
+        </li>
+        <li>
+            <customButton>
+                <a th:href="@{/agencia}">
+                    <i class='bx bxl-magento'></i>
+                    <span class="links_name">Agencias</span>
+                </a>
+                <span class="tooltip">Agencias</span>
+            </customButton>
+        </li>
+    </ul>
+    <div class="profile-content">
+        <div class="profile">
+            <div class="profile-details">
+                <a href="https://github.com/SoImRayh/CRUD-Spring">
+                    <i class='bx bxl-github'></i>
+                    <div class="name">Rayh</div>
+                </a>
+            </div>
+        </div>
+    </div>
+    <script>
+        let btn = document.querySelector("#btn");
+        let sidebar = document.querySelector(".sidebar");
+
+        btn.onclick = function (){
+            sidebar.classList.toggle("active");
+        }
+    </script>
+</sidebar>
+<h1 class="text-center" style="color: #fafafa; text-align: center; margin:25px">Enquanto isso, arte contemporânea!</h1>
+<div style="display:flex; justify-content: center;">
+
+    <div class="flex-box">
+        <div>
+            <img src="../static/images/lulu.jpeg" width="50%"
+                th:src="@{/images/lulu.jpeg}" style="height: 400px; width: 400px; margin: 25px">
+        </div>
+    </div>
 </div>
 </body>
 </html>
