--- a/src/main/resources/templates/agencia/Agencia.html
+++ b/src/main/resources/templates/agencia/Agencia.html
@@ -1,26 +1,79 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
 <html lang="pt-BR" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head th:insert="/fragments/start :: startHeader">
+<head>
+    <meta charset="UTF-8">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" th:href="@{/styles/css/components.css}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+          crossorigin="anonymous">
     <meta charset="UTF-8">
     <title>Agências</title>
 </head>
 <body>
-    <sidebar th:insert="/fragments/start :: sidebar(linkOne = 'index',linkTwo = 'banco')"></sidebar>
+<sidebar class="sidebar" >
+    <div class="logo-content">
+        <div class="logo">
+            <i class='bx bxl-xing'></i>
+            <div class="logo-name">Rayhbank</div>
+        </div>
+        <i class='bx bx-menu' id="btn"></i>
+    </div>
+    <ul class="nav_list">
+        <li>
+            <customButton>
+                <a  th:href="@{/}">
+                    <i class="bx bxs-home"></i>
+                    <span class="links_name">Inicio</span>
+                </a>
+                <span class="tooltip">Inicio</span>
+            </customButton>
+        </li>
+        <li>
+            <customButton >
+                <a th:href="@{/banco}">
+                    <i class="bx bxs-bank"></i>
+                    <span class="links_name">Bancos</span>
+                </a>
+                <span class="tooltip">Bancos</span>
+
+            </customButton>
+        </li>
+    </ul>
+    <div class="profile-content">
+        <div class="profile">
+            <div class="profile-details">
+                <a href="https://github.com/SoImRayh/CRUD-Spring">
+                    <i class='bx bxl-github'></i>
+                    <div class="name">Rayh</div>
+                </a>
+            </div>
+        </div>
+    </div>
+    <script>
+        let btn = document.querySelector("#btn");
+        let sidebar = document.querySelector(".sidebar");
+
+        btn.onclick = function (){
+            sidebar.classList.toggle("active");
+        }
+    </script>
+</sidebar>
     <div class="search-bar">
         <div class="bar-element">
-            <a th:href="@{/agencia/novo}"><button class="btn btn-primary">nova</button></a>
+            <a th:href="@{/agencia/novo}"><button class="btn btn-primary btn-sm">nova</button></a>
         </div>
         <div class="bar-element">
             <form class="bar-element" method="get" th:object="${filtro}" th:action="@{/agencia}">
                 <input type="text" name="filtro" id="filtro" th:value="${filtro}" required>
                 &nbsp;
-                <button type="text" class="custom-btn btn-16" th:href="@{/agencia(filtro = ${filtro})}">filtrar</button>
+                <button type="text" class="btn btn-primary btn-sm" th:href="@{/agencia(filtro = ${filtro})}">filtrar</button>
                 &nbsp
             </form>
         </div>
 
             <a th:if="${agencias.number > 0}" th:href="@{/agencia(page = ${agencias.number +1})}"><button class="btn btn-primary">anterior</button></a>
-            <a href="#"><button class="btn btn-primary">proxima</button></a>
+            <a href="#"><button class="btn btn-primary btn-sm">proxima</button></a>
         </div>
     </div>
 <div class="div-table">
